compile.log
src/com/zk/util/BaseImgEncodeUtil.java:24: error: cannot find symbol
import sun.misc.BASE64Encoder;
               ^
  symbol:   class BASE64Encoder
  location: package sun.misc
src/com/zk/util/BaseImgEncodeUtil.java:26: error: package com.sun.image.codec.jpeg does not exist
import com.sun.image.codec.jpeg.JPEGCodec;
                               ^
src/com/zk/util/BaseImgEncodeUtil.java:27: error: package com.sun.image.codec.jpeg does not exist
import com.sun.image.codec.jpeg.JPEGEncodeParam;
                               ^
src/com/zk/util/BaseImgEncodeUtil.java:28: error: package com.sun.image.codec.jpeg does not exist
import com.sun.image.codec.jpeg.JPEGImageEncoder;
                               ^
src/com/zk/util/XMLUtil.java:32: error: package com.sun.org.apache.xml.internal.serialize is not visible
import com.sun.org.apache.xml.internal.serialize.OutputFormat;
                                      ^
  (package com.sun.org.apache.xml.internal.serialize is declared in module java.xml, which does not export it)
src/com/zk/util/XMLUtil.java:33: error: package com.sun.org.apache.xml.internal.serialize is not visible
import com.sun.org.apache.xml.internal.serialize.XMLSerializer;
                                      ^
  (package com.sun.org.apache.xml.internal.serialize is declared in module java.xml, which does not export it)
src/com/zk/util/SetCharacterEncodingFilter.java:4: error: package javax.servlet does not exist
import javax.servlet.Filter;
                    ^
src/com/zk/util/SetCharacterEncodingFilter.java:5: error: package javax.servlet does not exist
import javax.servlet.FilterChain;
                    ^
src/com/zk/util/SetCharacterEncodingFilter.java:6: error: package javax.servlet does not exist
import javax.servlet.FilterConfig;
                    ^
src/com/zk/util/SetCharacterEncodingFilter.java:7: error: package javax.servlet does not exist
import javax.servlet.ServletException;
                    ^
src/com/zk/util/SetCharacterEncodingFilter.java:8: error: package javax.servlet does not exist
import javax.servlet.ServletRequest;
                    ^
src/com/zk/util/SetCharacterEncodingFilter.java:9: error: package javax.servlet does not exist
import javax.servlet.ServletResponse;
                    ^
src/com/zk/util/SetCharacterEncodingFilter.java:16: error: cannot find symbol
public class SetCharacterEncodingFilter implements Filter {
                                                   ^
  symbol: class Filter
src/com/zk/util/SetCharacterEncodingFilter.java:27: error: cannot find symbol
    protected FilterConfig filterConfig = null;
              ^
  symbol:   class FilterConfig
  location: class SetCharacterEncodingFilter
src/com/zk/util/SetCharacterEncodingFilter.java:52: error: cannot find symbol
    public void doFilter(ServletRequest request, ServletResponse response, FilterChain chain) throws IOException, ServletException
                         ^
  symbol:   class ServletRequest
  location: class SetCharacterEncodingFilter
src/com/zk/util/SetCharacterEncodingFilter.java:52: error: cannot find symbol
    public void doFilter(ServletRequest request, ServletResponse response, FilterChain chain) throws IOException, ServletException
                                                 ^
  symbol:   class ServletResponse
  location: class SetCharacterEncodingFilter
src/com/zk/util/SetCharacterEncodingFilter.java:52: error: cannot find symbol
    public void doFilter(ServletRequest request, ServletResponse response, FilterChain chain) throws IOException, ServletException
                                                                           ^
  symbol:   class FilterChain
  location: class SetCharacterEncodingFilter
src/com/zk/util/SetCharacterEncodingFilter.java:52: error: cannot find symbol
